// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accounts: action change account filter 1`] = `
Object {
  "filter": "search accounts",
  "type": "CHANGE_ACCOUNT_FILTER",
}
`;

exports[`Accounts: action fetch Oauth accounts failure 1`] = `
Object {
  "type": "FETCH_OAUTH_ACCOUNTS_FAILURE",
}
`;

exports[`Accounts: action fetch Oauth accounts request 1`] = `
Object {
  "type": "FETCH_OAUTH_ACCOUNTS_REQUEST",
}
`;

exports[`Accounts: action fetch Oauth accounts success 1`] = `
Object {
  "data": Array [
    Object {
      "address": "quxb0hj4dzgqwg83c52w0jvja6ukk022893z0w0k",
      "block_hash": "dcvn97pwo8yoh1ep9iwdo6hdulk9uxtz1dehps53emm6tpznqz7eba3p5p7pqoqc",
      "block_number": 107,
      "block_timestamp": "2022-11-09 23:13:38 UTC",
      "certificateString": "-----BEGIN CERTIFICATE-----
ZFu7U9gH/tPDNlYKwV0JofxMwMgUuvsgHdGeSJju4d300QNAOFgUV10WeUQBgK486lwUcvk6o8nAhJWYDFGbfnWcA8midQ6iicps/m7/T7fTu7V4M0vpldEWqfxekFuG/0AUyujhoqfwSfLJPmo0iQEP8LT3ilASHwzMjOetzeujV9tOemSm/3tKZcWkmqNx8ayKhb4mDdcclQ8zOAhNIkGBVd1fybuqqJHXLQC4yzbLHkWZ/OZTN2VhthECeF5ryiUUGZdOYxN2EFYnGPIIoqlpYsl4ab0gZvXK6bBw0vR/JvtpQPhuyw25VUIpa3UVAYRcdjABrAKjRovYdpEb8T002C4BnMCQMbWs8za6mhaG15zGQw5bRngQvbzjypVP7rlgyNJaaaPW0/EISVuSb1oycITPsxSneoUAHty1NfFaqRlFiH8hWAKVQ5nCiCAbjHDK03QjAmRecA82nn0DKZXqlf67LsKZN4KNbtKVEHCsTdivymmx3AokxtbMx2Ca3EIPc3h2Eykby3f7nR857UskcmL600HYs4tPIlF=
-----END CERTIFICATE-----
",
      "chainId": "",
      "commonName": "clinicaladmin",
      "country": "USA",
      "isValid": true,
      "organization": "BlockApps",
      "organizationalUnit": "Engineering",
      "owner": "6h2vbp7a08nevelwsyz6cnpuqr77diwi3wck720q",
      "parent": "0000000000000000000000000000000000000000",
      "publicKey": "-----BEGIN PUBLIC KEY-----
VRBEESfuZn6/YKyN8YQfL6uwbLFUPZFWTwZZswyXv6KRDbpXwBcQuoNuB5AIiQ9saR4yxBJRhaHLSQEZ/JzJBABTSxEWEtibIneBx0h8eAjVA3Zrpio9RMq/==
-----END PUBLIC KEY-----
",
      "record_id": "quxb0hj4dzgqwg83c52w0jvja6ukk022893z0w0k",
      "transaction_hash": "9hj1qyqu52wqn45kgk5c6doy3go7qfm3beuze4dw4rfdps8ffgperqxb08qv4y72",
      "transaction_sender": "a1n72r68azg8xgx5bnr6myz0npqs9setrw2tijoc",
      "userAddress": "bzvlsnw1xpmipq866nuxkyjxb2crh0jcw1t8olbj",
    },
    Object {
      "address": "2pija4bap2id714a805tju8kgfti0g4zz92xb2p2",
      "block_hash": "qsv3kkq2qj6te2lazhqwcmx8t3uwec92gfeujsajglc58f0b83eumifklcwbuu6y",
      "block_number": 420,
      "block_timestamp": "2022-11-08 23:13:38 UTC",
      "certificateString": "-----BEGIN CERTIFICATE-----
HNzSWfySaQ7F9nJPmN4S3O0VjImiuYUxtkoecEQbvcj9bD0RPuXVpdXyVaUsBOPCK3FF0PVgqrmRd8DavK10TAo/Y3uK7XPTfRUc4Rpp1WX3nujsyx2UhzWLOgjSqooc6ElZA6S/ZVB6s3/77Ht/N1Kr86zqD2G0F3TEQDGKSTxN84Rq4/FDMlOACtV2s3csSHFjH9WyyZWjshWVC6KVQs0imMvXZbjyuep4Q0PmhkTyeUwsItPv7ZhXhZEVE3YtgJyqFcmGiIanSRQm7GUZJMMEtfBQl7WpHGO3ueNUMM/ePMbWvXbrj4R3m8tnbSKUPnySWetxr/RZTJorRFsnoR6bHfJL9E370EZPg9gTL1wmx53PGAff1BcQhww32KtBSkAYpXtHlFpvOaYo3aFIHuuQVxviv5jft1HgDWBsqWsh2cBbw3yBjskqiCBrJvahRq6Axk109xqcj8zWJqE1KzbSUhVRI3xcbavmb0jdnilJyoGr6mvrnxnwJc5b/YNhFuy2cr8u5vrtfXHbmPquqyDeCvwUIEOuBbSIjRm=
-----END CERTIFICATE-----
",
      "chainId": "",
      "commonName": "clinicalops",
      "country": "USA",
      "isValid": true,
      "organization": "BlockApps",
      "organizationalUnit": "DevOps",
      "owner": "lcifb59wxctj6dp11c4h3gzrjhhx2tubk3o7j10h",
      "parent": "0000000000000000000000000000000000000000",
      "publicKey": "-----BEGIN PUBLIC KEY-----
LjOJsnkZ8stbjPk2LyaYZCnjdfd3ehu5y8yHPfBT2iF49Hd2D/RseopgsmKMcyF5Zf7LeNY9XqhLlbt5pFhYrJ2jXW9S0sCrpaposrhmT0EnGyeWiyFHQZA7==
-----END PUBLIC KEY-----
",
      "record_id": "2pija4bap2id714a805tju8kgfti0g4zz92xb2p2",
      "transaction_hash": "kaxjqjglb0uuue895oz8onmpzmybm7pp2k88n02kub4paoorazmn8o25egyf7mqb",
      "transaction_sender": "pa6ml06vx6pyxe16l99j6ed5s5ivoyi8k2txxpoj",
      "userAddress": "ozw2xzoyais9e1p73sqeh9vd8mcvfm2oog6wc870",
    },
  ],
  "type": "FETCH_OAUTH_ACCOUNTS_SUCCESS",
}
`;

exports[`Accounts: action fetch account detail failure 1`] = `
Object {
  "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
  "error": "ERROR",
  "name": "tanuj",
  "type": "FETCH_ACCOUNT_DETAIL_FAILURE",
}
`;

exports[`Accounts: action fetch account detail request 1`] = `
Object {
  "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
  "chainId": "ff7ef45acb7a775018bc765b6fdeea432aaddfcd846cf6dd9442724266b1eac9",
  "flag": "faucet",
  "name": "tanuj",
  "type": "FETCH_ACCOUNT_DETAIL_REQUEST",
}
`;

exports[`Accounts: action fetch account detail success 1`] = `
Object {
  "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
  "detail": Object {
    "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
    "balance": "999999999999699729688",
    "code": "",
    "codeHash": "c5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
    "contractRoot": "56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
    "kind": "AddressStateRef",
    "latestBlockNum": 9,
    "next": "/eth/v1.2/account?address=76a3192ce9aa0531fe7e0e3489a469018c0bff03&index=7",
    "nonce": 8,
    "source": "",
  },
  "name": "tanuj",
  "type": "FETCH_ACCOUNT_DETAIL_SUCCESS",
}
`;

exports[`Accounts: action fetch accounts failure 1`] = `
Object {
  "error": "ERROR",
  "type": "FETCH_ACCOUNTS_FAILED",
}
`;

exports[`Accounts: action fetch accounts request 1`] = `
Object {
  "chainId": "ff7ef45acb7a775018bc765b6fdeea432aaddfcd846cf6dd9442724266b1eac9",
  "loadAddresses": true,
  "loadBalances": true,
  "type": "FETCH_ACCOUNTS",
}
`;

exports[`Accounts: action fetch accounts success 1`] = `
Object {
  "accounts": Array [
    "Admin_1085_64667",
    "Supplier1",
    "Supplier2",
    "Buyer1",
    "Buyer2",
    "Admin_1177_49507",
    "Admin_1177_39206",
    "Admin_1177_31203",
    "User_1177_14462",
    "123456789012345678901234567890123",
    "User_1177_26292",
    "User_1177_69645 ?#%!@*",
    "User_1177_59578",
    "User_1177_79118",
    "User_1177_59359",
    "User_1177_42489",
    "User_1177_37717",
    "User_1177_52307",
    "Buyer1177_18955",
    "Supplier1177_62701",
    "Admin_1301_86023",
    "Admin_1301_62816",
    "Supplier0_1301_46441",
    "Supplier1_1301_46441",
    "Supplier2_1301_46441",
    "tanuj",
  ],
  "type": "FETCH_ACCOUNTS_SUCCESSFULL",
}
`;

exports[`Accounts: action fetch balance failure 1`] = `
Object {
  "error": "ERROR",
  "type": "BALANCE_FAILURE",
}
`;

exports[`Accounts: action fetch balance request 1`] = `
Object {
  "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
  "type": "GET_BALANCE",
}
`;

exports[`Accounts: action fetch balance success 1`] = `
Object {
  "detail": Object {
    "balance": "3000000000000000000000",
  },
  "type": "BALANCE_SUCCESS",
}
`;

exports[`Accounts: action fetch current account detail failure 1`] = `
Object {
  "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
  "error": "ERROR",
  "type": "FETCH_CURRENT_ACCOUNT_DETAIL_FAILURE",
}
`;

exports[`Accounts: action fetch current account detail request 1`] = `
Object {
  "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
  "type": "FETCH_CURRENT_ACCOUNT_DETAIL_REQUEST",
}
`;

exports[`Accounts: action fetch current account detail success 1`] = `
Object {
  "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
  "detail": Object {
    "balance": "3000000000000000000000",
  },
  "type": "FETCH_CURRENT_ACCOUNT_DETAIL_SUCCESS",
}
`;

exports[`Accounts: action fetch user addresses failure 1`] = `
Object {
  "error": "ERROR",
  "name": "tanuj",
  "type": "FETCH_ACCOUNT_ADDRESS_FAILURE",
}
`;

exports[`Accounts: action fetch user addresses request 1`] = `
Object {
  "chainId": "ff7ef45acb7a775018bc765b6fdeea432aaddfcd846cf6dd9442724266b1eac9",
  "loadBalances": true,
  "name": "tanuj",
  "type": "FETCH_ACCOUNT_ADDRESS_REQUEST",
}
`;

exports[`Accounts: action fetch user addresses reset user 1`] = `
Object {
  "name": "Bid",
  "type": "RESET_ACCOUNT_ADDRESS",
}
`;

exports[`Accounts: action fetch user addresses success 1`] = `
Object {
  "addresses": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
  "name": "tanuj",
  "type": "FETCH_ACCOUNT_ADDRESS_SUCCESS",
}
`;
